@@ -68,6 +68,12 @@ RELEASE 0.XX - XXX
   - Refactor the creation of the Program, *Object and *Library Builders
     so that they're moved out of SCons.Defaults and created on demand.
 
+  - Don't split SConscript file names on white space.
+
+  - Document the SConscript function's "dirs" and "name" keywords.
+
+  - Remove the internal (and superfluous) SCons.Util.argmunge() function.
+
   From Gary Oberbrunner:
 
   - Report the target being built in error messages when building
